<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_record_book"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"

        >

    </TextView>
<Button
    android:background="@drawable/button_design3"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:id="@+id/sign_up_home"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/already_member"
    android:layout_marginHorizontal="60dp"
    android:text="@string/register_home"
    android:textColor="@color/background"
    android:layout_marginBottom="100dp"
    android:textAlignment="center"
    >
</Button>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/already_member"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_home"
        android:layout_marginTop="30dp"
        android:text="@string/already_a_member"
        >
    </TextView>

    <TextView
        android:id="@+id/sign_in_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/already_member"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_home"
        android:textColor="@color/white"
        >
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>