<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_activity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@android:dimen/app_icon_size"
        android:layout_marginEnd="@android:dimen/app_icon_size"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <EditText
                android:layout_marginVertical="10dp"
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.383"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.259" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:layout_marginVertical="10dp"
                android:ems="10"
                android:hint="@string/e_mail"
                android:drawableStart="@drawable/ic_email"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="78dp"
                tools:layout_editor_absoluteY="406dp" />

            <EditText
                android:id="@+id/editTextTextPassword1"
                android:layout_marginVertical="10dp"
android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginVertical="10dp"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword" />

            <Button
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="20dp"
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/register"
                tools:layout_editor_absoluteX="134dp"
                tools:layout_editor_absoluteY="585dp" />
            <TextView
                android:id="@+id/login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_registered_login_here"
                android:clickable="true"
                android:textSize="15sp"
                android:textColor="#000000"
                android:focusable="true">

            </TextView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>